--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <header>You am I? </header>
@@ -22,7 +22,8 @@
     <br>
      <img  id="My_Image"src="./images/Original_Image.jpg">
     <div id="Next ">
-            
+            <a href="./About.html"><button >Go to About Page</button></a>
+            <a href="./Projects.html"><button>Go to Projects Page</button></a>
     </div> 
 <footer>
     <p>@2025 Aryan Parihar.All Rights Reserved</p>
